feature(csrf-token): add csrf token cookie
closes #48

> Cookie:_ga=GA1.1.776949977.1456326673;
.AspNetCore.Antiforgery.UXO5fwPO0_I=CfDJ8MWQ4vQ8YoxPiafJLrfvOsudL0CCVXA8
_NntZcOKwN9DJUbwd7rSR3gLIurZ0wmrHfHQUwzpTQdDcHfDQbVP1wl2EXIuI2n--HwpW7L1
YblEK2qa4rU58-kkZ0EB5x9SnFP_wZJOPdSLicT5STl8fOg;
XSRF-TOKEN=CfDJ8MWQ4vQ8YoxPiafJLrfvOss01F393ftQsOZ-XtJIgsaLOgv7_5arDVb_U
P5zTN13u6bkwDvRieoXNGo6vEPgpSVqbpEVXaMRr2UlS_qM4h_LmQ-We6l5IRo1HzAeD5Qa0
KIBEB2TLgBKAYv-Uo2MQWc
> Host:localhost:5000

--- a/project.json
+++ b/project.json
@@ -14,11 +14,14 @@
     "Gray.Microsoft.AspNetCore.SignalR.Server": "0.2.0-alpha1",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
-    "Microsoft.AspNetCore.Mvc": "1.1.0",
+    "Microsoft.AspNetCore.Mvc": "1.1.1",
     "Microsoft.AspNetCore.Razor.Tools": {
       "type": "build",
       "version": "1.0.0-preview2-final"
     },
+    "Microsoft.AspNetCore.Cors": "1.1.0",
+    "Microsoft.AspNetCore.Antiforgery": "1.1.0",
+    "Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
     "Microsoft.AspNetCore.SpaServices": "1.1.0-*",
